<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="25dp"
  tools:context=".activity.CVForm">



  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Form for CV -->
    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/form_tv_nom"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="5dp"
      android:hint="@string/form_last_name" />

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/form_tv_prenom"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="5dp"
      android:hint="@string/form_first_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_tv_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:inputType="number"
        android:hint="@string/form_age" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_tv_adresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_adresse" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_tv_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:inputType="phone"
        android:hint="@string/form_telephone" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_tv_specialite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_specialite" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_tv_niveau_etude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_niveau_etude" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/form_tv_experience_pro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/form_experience_pro" />


  </LinearLayout>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/form_buttonSave"
    android:text="@string/button_save_cv"
    android:layout_alignParentBottom="true"
    android:minHeight="60dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

</RelativeLayout>